--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-aria-components": "^1.3.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13"
   },
