--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
-{
+
+
+  {
     "version": 2,
     "builds": [
       {
-        "src": "src/index.tsx",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"  
@@ -13,4 +15,3 @@
       { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
-  
