--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
-
-
-  {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"  
-        }
-      }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+{
+    "outputDirectory": "dist"
   }
