--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-    "outputDirectory": "dist"
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"  
+        }
+      }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/index.html" }
+    ]
   }
+  
