removed: vercel.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
